--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,19 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
+		<commons-exec.version>1.4.0</commons-exec.version>
+		<commons-compress.version>1.26.2</commons-compress.version>
+		<httpclient5.version>5.3.1</httpclient5.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -64,20 +74,20 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-exec</artifactId>
-			<version>1.4.0</version>
+			<version>${commons-exec.version}</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.26.2</version>
+			<version>${commons-compress.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
-			<version>5.3.1</version>
+			<version>${httpclient5.version}</version>
 		</dependency>
 
 	</dependencies>
